# Fun-Free-Time

./: README.md
2D/: CMakeLists.txt
OpenGL/: CMakeLists.txt  glad.c  main.cpp
codewars/cstring_to_int/: CMakeLists.txt  cstring.cpp  narcissist.cpp  splittingstrings.cpp  testing123.cpp
map/: CMakeLists.txt  test.cpp
